--- a/data.ipynb
+++ b/data.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0e036f19",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_29816\\3486561847.py:3: DtypeWarning: Columns (7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  vuelos = pd.read_csv(\"flights.csv\")\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m vuelos = pd.read_csv(\u001b[33m\"\u001b[39m\u001b[33mflights.csv\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
      ]
     }
    ],
@@ -23,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a5c47afa",
    "metadata": {},
    "outputs": [
@@ -2286,16 +2289,16 @@
     }
    ],
    "source": [
-    "# Extraer un datagrame reducido en filas con el 0,1% de los datos random\n",
+    "# Extraer un datagrame reducido en filas con el 100% de los datos random\n",
     "\n",
-    "vuelos_reducido = vuelos.sample(frac=0.05, random_state=1)\n",
+    "vuelos_reducido = vuelos.sample(frac=1, random_state=1)\n",
     "\n",
     "display(vuelos_reducido)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "90e1c0af",
    "metadata": {},
    "outputs": [],
@@ -2306,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "48c72154",
    "metadata": {},
    "outputs": [
@@ -4969,7 +4972,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -4983,7 +4986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
